--- a/Tic-Tac-Toi.html
+++ b/Tic-Tac-Toi.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
-    <link rel="stylesheet" href="p8.css">
+    <link rel="stylesheet" href="Tic-Tac-Toi.css">
 </head>
 <body>
     <nav>
@@ -39,6 +39,6 @@
             <img src="happy.gif" alt="">
         </div>
     </div>
-    <script src="p8.js"></script>
+    <script src="Tic-Tac-Toi.js"></script>
 </body> 
 </html>
